--- a/index.html
+++ b/index.html
@@ -7,23 +7,23 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
-  <!-- NAV -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">PC Builder Central</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item"><a class="nav-link" href="builds.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="divs.html">Build Options</a></li>
-          <li class="nav-item"><a class="nav-link" href="form.html">Contact</a></li>
-          <li class="nav-item"><a class="nav-link" href="cards.html">Documentation</a></li>
-        </ul>
-      </div>
+<!-- NAV section inside index.html -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="index.html">PC Builder Central</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="divs.html">Build Options</a></li>
+        <li class="nav-item"><a class="nav-link" href="form.html">Contact</a></li>
+        <li class="nav-item"><a class="nav-link" href="cards.html">Documentation</a></li>
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
 
   <!-- HERO SECTION -->
   <header class="bg-primary text-white text-center py-5">
