--- a/divs.html
+++ b/divs.html
@@ -8,22 +8,22 @@
 </head>
 <body>
   <!-- NAV -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">PC Builder Central</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item"><a class="nav-link" href="builds.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link active" href="divs.html">Build Options</a></li>
-          <li class="nav-item"><a class="nav-link" href="form.html">Contact</a></li>
-          <li class="nav-item"><a class="nav-link" href="cards.html">Documentation</a></li>
-        </ul>
-      </div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="index.html">PC Builder Central</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link active" href="divs.html">Build Options</a></li>
+        <li class="nav-item"><a class="nav-link" href="form.html">Contact</a></li>
+        <li class="nav-item"><a class="nav-link" href="cards.html">Documentation</a></li>
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
 
   <!-- PAGE CONTENT -->
   <div class="container my-5">
