--- a/form.html
+++ b/form.html
@@ -7,7 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
-  <!-- NAV -->
+  <!-- NAV (exact match) -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">PC Builder Central</a>
@@ -25,8 +25,8 @@
     </div>
   </nav>
 
-  <!-- CONTACT FORM -->
-  <div class="container my-5">
+  <!-- PAGE CONTENT -->
+  <div class="container mt-5">
     <h1 class="text-center mb-4">Contact Us</h1>
     <form>
       <div class="mb-3">
@@ -46,7 +46,7 @@
   </div>
 
   <!-- FOOTER -->
-  <footer class="bg-dark text-white text-center py-3">
+  <footer class="bg-dark text-white text-center py-3 mt-5">
     <p>&copy; 2025 PC Builder Central. All rights reserved.</p>
   </footer>
 
