--- a/form.html
+++ b/form.html
@@ -7,7 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
-  <!-- NAV (exact match) -->
+  <!-- NAV -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">PC Builder Central</a>
@@ -25,9 +25,16 @@
     </div>
   </nav>
 
-  <!-- PAGE CONTENT -->
-  <div class="container mt-5">
-    <h1 class="text-center mb-4">Contact Us</h1>
+  <!-- HERO HEADER (for visual match) -->
+  <div class="jumbotron p-5 mb-4 bg-light rounded-3">
+    <div class="container-fluid py-5">
+      <h1 class="display-5 fw-bold text-center">Get in Touch</h1>
+      <p class="col-md-8 fs-4 mx-auto text-center">We’d love to hear from you. Fill out the form below and we’ll get back as soon as possible.</p>
+    </div>
+  </div>
+
+  <!-- FORM SECTION -->
+  <div class="container mb-5">
     <form>
       <div class="mb-3">
         <label for="name" class="form-label">Your Name</label>
@@ -46,7 +53,7 @@
   </div>
 
   <!-- FOOTER -->
-  <footer class="bg-dark text-white text-center py-3 mt-5">
+  <footer class="bg-dark text-white text-center py-3">
     <p>&copy; 2025 PC Builder Central. All rights reserved.</p>
   </footer>
 
