--- a/divs.html
+++ b/divs.html
@@ -8,22 +8,22 @@
 </head>
 <body>
   <!-- NAV -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="index.html">PC Builder Central</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-        <li class="nav-item"><a class="nav-link active" href="divs.html">Build Options</a></li>
-        <li class="nav-item"><a class="nav-link" href="form.html">Contact</a></li>
-        <li class="nav-item"><a class="nav-link" href="cards.html">Documentation</a></li>
-      </ul>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="index.html">PC Builder Central</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link active" href="divs.html">Build Options</a></li>
+          <li class="nav-item"><a class="nav-link" href="form.html">Contact</a></li>
+          <li class="nav-item"><a class="nav-link" href="cards.html">Documentation</a></li>
+        </ul>
+      </div>
     </div>
-  </div>
-</nav>
+  </nav>
 
   <!-- PAGE CONTENT -->
   <div class="container my-5">
@@ -34,7 +34,7 @@
           <div class="card-body">
             <h5 class="card-title">Budget Gamer</h5>
             <p class="card-text">Affordable performance for casual and entry-level gaming.</p>
-            <a href="#" class="btn btn-outline-primary">View Build</a>
+            <a href="budget.html" class="btn btn-outline-primary">View Build</a>
           </div>
         </div>
       </div>
@@ -43,7 +43,7 @@
           <div class="card-body">
             <h5 class="card-title">Mid-Range Powerhouse</h5>
             <p class="card-text">Strong performance for gaming, streaming, and multitasking.</p>
-            <a href="#" class="btn btn-outline-primary">View Build</a>
+            <a href="midrange.html" class="btn btn-outline-primary">View Build</a>
           </div>
         </div>
       </div>
@@ -52,7 +52,7 @@
           <div class="card-body">
             <h5 class="card-title">Creator Pro</h5>
             <p class="card-text">Ideal for video editing, design, and creative workloads.</p>
-            <a href="#" class="btn btn-outline-primary">View Build</a>
+            <a href="creator.html" class="btn btn-outline-primary">View Build</a>
           </div>
         </div>
       </div>
