--- a/creator.html
+++ b/creator.html
@@ -7,7 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
-  <!-- NAVBAR -->
+  <!-- NAV -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">PC Builder Central</a>
@@ -17,7 +17,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link active" href="divs.html">Build Options</a></li>
+          <li class="nav-item"><a class="nav-link" href="divs.html">Build Options</a></li>
           <li class="nav-item"><a class="nav-link" href="form.html">Contact</a></li>
           <li class="nav-item"><a class="nav-link" href="cards.html">Documentation</a></li>
         </ul>
@@ -27,15 +27,17 @@
 
   <!-- CONTENT -->
   <div class="container my-5">
-    <h1 class="mb-4 text-center">Creator Pro Build</h1>
-    <img src="images/creator.jpg" class="img-fluid rounded mb-4" alt="Creator Build Image">
+    <h1 class="text-center mb-4">Creator Pro Build</h1>
+    <img src="images/creator.jpg" class="img-fluid rounded mb-4" alt="Creator Pro Build">
     <p>This high-performance build is designed for professionals in content creation — video editors, streamers, animators, and 3D designers. It includes a powerful multi-core CPU, a high-end GPU, large RAM capacity, and ultra-fast NVMe storage. Perfect for tackling demanding workloads efficiently.</p>
+    <p>You can customize this section to include part lists, links to buy components, performance benchmarks, and setup tips.</p>
   </div>
 
   <!-- FOOTER -->
   <footer class="bg-dark text-white text-center py-3">
     <p>&copy; 2025 PC Builder Central. All rights reserved.</p>
   </footer>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
