--- a/budget.html
+++ b/budget.html
@@ -7,6 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
+  <!-- NAV -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">PC Builder Central</a>
@@ -16,7 +17,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link active" href="divs.html">Build Options</a></li>
+          <li class="nav-item"><a class="nav-link" href="divs.html">Build Options</a></li>
           <li class="nav-item"><a class="nav-link" href="form.html">Contact</a></li>
           <li class="nav-item"><a class="nav-link" href="cards.html">Documentation</a></li>
         </ul>
@@ -24,15 +25,19 @@
     </div>
   </nav>
 
+  <!-- CONTENT -->
   <div class="container my-5">
-    <h1 class="mb-4 text-center">Budget Gamer Build</h1>
-    <img src="your-image-budget.jpg" class="img-fluid rounded mb-4" alt="Budget Build Image">
-    <p>This section is for your budget gaming build description. You can describe the components, cost, performance level, and who it’s ideal for (e.g., casual gamers, students, etc.).</p>
+    <h1 class="text-center mb-4">Budget Gamer Build</h1>
+    <img src="images/budget.jpg" class="img-fluid rounded mb-4" alt="Budget Build">
+    <p>This entry-level gaming build is perfect for casual gamers or students who want solid 1080p performance on a budget. It features a reliable quad-core CPU, a value-tier GPU, and fast SSD storage to ensure smooth performance across modern titles.</p>
+    <p>You can add detailed part specs here, estimated prices, and upgrade recommendations for future-proofing.</p>
   </div>
 
+  <!-- FOOTER -->
   <footer class="bg-dark text-white text-center py-3">
     <p>&copy; 2025 PC Builder Central. All rights reserved.</p>
   </footer>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
