--- a/midrange.html
+++ b/midrange.html
@@ -7,7 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
-  <!-- NAVBAR -->
+  <!-- NAV -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">PC Builder Central</a>
@@ -17,7 +17,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link active" href="divs.html">Build Options</a></li>
+          <li class="nav-item"><a class="nav-link" href="divs.html">Build Options</a></li>
           <li class="nav-item"><a class="nav-link" href="form.html">Contact</a></li>
           <li class="nav-item"><a class="nav-link" href="cards.html">Documentation</a></li>
         </ul>
@@ -27,15 +27,17 @@
 
   <!-- CONTENT -->
   <div class="container my-5">
-    <h1 class="mb-4 text-center">Mid-Range Powerhouse Build</h1>
-    <img src="images/midrange.jpg" class="img-fluid rounded mb-4" alt="Mid-Range Build Image">
-    <p>This mid-range build strikes a perfect balance between price and performance. Ideal for gamers who want 1080p and 1440p gaming at high settings, as well as streamers and multitaskers. Equip it with a solid CPU, a powerful mid-tier GPU, and fast SSD storage for a smooth all-around experience.</p>
+    <h1 class="text-center mb-4">Mid-Range Powerhouse Build</h1>
+    <img src="images/midrange.jpg" class="img-fluid rounded mb-4" alt="Mid-Range Build">
+    <p>This build is ideal for gamers who want to play modern titles at 1080p/1440p with high settings and smooth frame rates. It also supports streaming, light editing, and multitasking with a solid CPU, powerful GPU, and fast SSD storage.</p>
+    <p>Add a component breakdown, performance benchmarks, or even embedded videos to showcase the build’s power here.</p>
   </div>
 
   <!-- FOOTER -->
   <footer class="bg-dark text-white text-center py-3">
     <p>&copy; 2025 PC Builder Central. All rights reserved.</p>
   </footer>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
