--- a/!DOCTYPE.html
+++ b/!DOCTYPE.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>PC Builder Central</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
   <!-- NAV -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="builds.html">PC Builder Central</a>
-      <div class="collapse navbar-collapse">
+      <a class="navbar-brand" href="index.html">PC Builder Central</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item"><a class="nav-link" href="builds.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="divs.html">Build Options</a></li>
           <li class="nav-item"><a class="nav-link" href="form.html">Contact</a></li>
           <li class="nav-item"><a class="nav-link" href="cards.html">Documentation</a></li>
@@ -24,7 +27,6 @@
 
   <!-- PAGE CONTENT -->
   <div class="container mt-4">
-    <!-- builds.html content -->
     <div class="jumbotron p-5 mb-4 bg-light rounded-3">
       <div class="container-fluid py-5">
         <h1 class="display-5 fw-bold">Explore Custom PC Builds</h1>
@@ -65,5 +67,7 @@
   <footer class="bg-dark text-white text-center py-3">
     <p>&copy; 2025 PC Builder Central. All rights reserved.</p>
   </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
