--- a/divs.html
+++ b/divs.html
@@ -29,6 +29,8 @@
   <div class="container my-5">
     <h1 class="text-center mb-4">Choose Your Build Path</h1>
     <div class="row text-center">
+      
+      <!-- Budget Gamer -->
       <div class="col-md-4">
         <div class="card h-100">
           <div class="card-body">
@@ -38,6 +40,8 @@
           </div>
         </div>
       </div>
+
+      <!-- Mid-Range Powerhouse -->
       <div class="col-md-4">
         <div class="card h-100">
           <div class="card-body">
@@ -47,6 +51,8 @@
           </div>
         </div>
       </div>
+
+      <!-- Creator Pro -->
       <div class="col-md-4">
         <div class="card h-100">
           <div class="card-body">
@@ -56,6 +62,7 @@
           </div>
         </div>
       </div>
+
     </div>
   </div>
 
