--- a/index.html
+++ b/index.html
@@ -25,47 +25,47 @@
   </div>
 </nav>
 
-  <!-- HERO SECTION -->
-  <header class="bg-primary text-white text-center py-5">
-    <div class="container">
-      <h1 class="display-4">Welcome to PC Builder Central</h1>
-      <p class="lead">Build your dream PC. Fast. Easy. Reliable.</p>
-      <a href="builds.html" class="btn btn-light btn-lg mt-3">View Builds</a>
+<!-- HERO SECTION -->
+<header class="bg-primary text-white text-center py-5">
+  <div class="container">
+    <h1 class="display-4">Welcome to PC Builder Central</h1>
+    <p class="lead">Build your dream PC. Fast. Easy. Reliable.</p>
+    <a href="divs.html" class="btn btn-light btn-lg mt-3">View Builds</a>
+  </div>
+</header>
+
+<!-- FEATURE HIGHLIGHTS -->
+<section class="container my-5">
+  <div class="row text-center">
+    <div class="col-md-4">
+      <h4>Beginner-Friendly</h4>
+      <p>Whether you're new or experienced, we simplify your building journey.</p>
     </div>
-  </header>
-
-  <!-- FEATURE HIGHLIGHTS -->
-  <section class="container my-5">
-    <div class="row text-center">
-      <div class="col-md-4">
-        <h4>Beginner-Friendly</h4>
-        <p>Whether you're new or experienced, we simplify your building journey.</p>
-      </div>
-      <div class="col-md-4">
-        <h4>Tailored Builds</h4>
-        <p>Explore options crafted for gaming, productivity, and creation.</p>
-      </div>
-      <div class="col-md-4">
-        <h4>Expert Support</h4>
-        <p>Questions? We’ve got your back every step of the way.</p>
-      </div>
+    <div class="col-md-4">
+      <h4>Tailored Builds</h4>
+      <p>Explore options crafted for gaming, productivity, and creation.</p>
     </div>
-  </section>
-
-  <!-- CTA -->
-  <section class="bg-light py-5">
-    <div class="container text-center">
-      <h2>Ready to Build?</h2>
-      <p class="mb-4">Choose from pre-made builds or customize your own to match your goals and budget.</p>
-      <a href="divs.html" class="btn btn-primary btn-lg">Start Building Now</a>
+    <div class="col-md-4">
+      <h4>Expert Support</h4>
+      <p>Questions? We’ve got your back every step of the way.</p>
     </div>
-  </section>
+  </div>
+</section>
 
-  <!-- FOOTER -->
-  <footer class="bg-dark text-white text-center py-3">
-    <p>&copy; 2025 PC Builder Central. All rights reserved.</p>
-  </footer>
+<!-- CTA -->
+<section class="bg-light py-5">
+  <div class="container text-center">
+    <h2>Ready to Build?</h2>
+    <p class="mb-4">Choose from pre-made builds or customize your own to match your goals and budget.</p>
+    <a href="divs.html" class="btn btn-primary btn-lg">Start Building Now</a>
+  </div>
+</section>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<!-- FOOTER -->
+<footer class="bg-dark text-white text-center py-3">
+  <p>&copy; 2025 PC Builder Central. All rights reserved.</p>
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
