--- a/divs.html
+++ b/divs.html
@@ -29,7 +29,6 @@
   <div class="container my-5">
     <h1 class="text-center mb-4">Choose Your Build Path</h1>
     <div class="row text-center">
-      
       <!-- Budget Gamer -->
       <div class="col-md-4">
         <div class="card h-100">
@@ -41,7 +40,7 @@
         </div>
       </div>
 
-      <!-- Mid-Range Powerhouse -->
+      <!-- Mid-Range -->
       <div class="col-md-4">
         <div class="card h-100">
           <div class="card-body">
@@ -52,7 +51,7 @@
         </div>
       </div>
 
-      <!-- Creator Pro -->
+      <!-- Creator -->
       <div class="col-md-4">
         <div class="card h-100">
           <div class="card-body">
@@ -62,7 +61,6 @@
           </div>
         </div>
       </div>
-
     </div>
   </div>
 
