--- a/proj2/index.html
+++ b/proj2/index.html
@@ -108,29 +108,37 @@
         });
 
         // Radar chart
-        Papa.parse('DriverPerformance.csv', {
-            download: true,
-            header: true,
-            complete: function(results) {
-                const metrics = ['On_Time_Delivery_Score', 'Customer_Rating', 'Fuel_Efficiency', 'Safety_Score'];
-                const avg = metrics.map(metric => {
-                    const values = results.data.map(row => parseFloat(row[metric]));
-                    return values.reduce((a, b) => a + b, 0) / values.length;
-                });
-                new Chart(document.getElementById('driverChart'), {
-                    type: 'radar',
-                    data: {
-                        labels: metrics,
-                        datasets: [{
-                            label: 'Avg Score',
-                            data: avg,
-                            backgroundColor: 'rgba(0, 123, 255, 0.3)',
-                            borderColor: 'blue'
-                        }]
-                    }
-                });
+      // Radar chart (Driver Performance)
+Papa.parse('DriverPerformance.csv', {
+    download: true,
+    header: true,
+    complete: function(results) {
+        const metrics = ['On_Time_Delivery_Score', 'Customer_Rating', 'Fuel_Efficiency', 'Safety_Score'];
+
+        // Filter out invalid rows
+        const cleanData = results.data.filter(row =>
+            metrics.every(metric => !isNaN(parseFloat(row[metric])))
+        );
+
+        const avg = metrics.map(metric => {
+            const values = cleanData.map(row => parseFloat(row[metric]));
+            return values.reduce((a, b) => a + b, 0) / values.length;
+        });
+
+        new Chart(document.getElementById('driverChart'), {
+            type: 'radar',
+            data: {
+                labels: metrics,
+                datasets: [{
+                    label: 'Avg Score',
+                    data: avg,
+                    backgroundColor: 'rgba(0, 123, 255, 0.3)',
+                    borderColor: 'blue'
+                }]
             }
         });
+    }
+});
 
         // Doughnut chart
         Papa.parse('Maintenance.csv', {
